crates/pg_syntax/tests/snapshots/postgres_regress/macaddr@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a, b, trunc(b) FROM macaddr_data ORDER BY 2, 1;"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "a"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..11
    ColumnRef@10..11
      Ident@10..11 "b"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..20
    FuncCall@13..20
      Ident@13..18 "trunc"
      Ascii40@18..19 "("
      ColumnRef@19..20
        Ident@19..20 "b"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "FROM"
  Whitespace@26..27 " "
  RangeVar@27..39
    Ident@27..39 "macaddr_data"
  Whitespace@39..40 " "
  SortBy@40..50
    Order@40..45 "ORDER"
    Whitespace@45..46 " "
    By@46..48 "BY"
    Whitespace@48..49 " "
    AConst@49..50
      Iconst@49..50 "2"
  Ascii44@50..51 ","
  Whitespace@51..52 " "
  SortBy@52..53
    AConst@52..53
      Iconst@52..53 "1"
  Ascii59@53..54 ";"

