crates/pg_syntax/tests/snapshots/postgres_regress/macaddr@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr_data VALUES (1, '08:00:2b:01:02:03');"
---
InsertStmt@0..57
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "macaddr_data"
  Whitespace@24..25 " "
  SelectStmt@25..55
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..55
      AConst@33..34
        Iconst@33..34 "1"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..55
        Sconst@36..55 "'08:00:2b:01:02:03'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

