crates/pg_syntax/tests/snapshots/postgres_regress/macaddr@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT b <  '08:00:2b:01:02:04' FROM macaddr_data WHERE a = 1;"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    AExpr@7..31
      ColumnRef@7..8
        Ident@7..8 "b"
      Whitespace@8..9 " "
      Ascii60@9..10 "<"
      Whitespace@10..12 "  "
      AConst@12..31
        Sconst@12..31 "'08:00:2b:01:02:04'"
  Whitespace@31..32 " "
  From@32..36 "FROM"
  Whitespace@36..37 " "
  RangeVar@37..49
    Ident@37..49 "macaddr_data"
  Whitespace@49..50 " "
  Where@50..55 "WHERE"
  Whitespace@55..56 " "
  AExpr@56..61
    ColumnRef@56..57
      Ident@56..57 "a"
    Whitespace@57..58 " "
    Ascii61@58..59 "="
    Whitespace@59..60 " "
    AConst@60..61
      Iconst@60..61 "1"
  Ascii59@61..62 ";"

