crates/pg_syntax/tests/snapshots/postgres_regress/macaddr@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr_data VALUES (7, '08002b010203');"
---
InsertStmt@0..52
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "macaddr_data"
  Whitespace@24..25 " "
  SelectStmt@25..50
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..50
      AConst@33..34
        Iconst@33..34 "7"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..50
        Sconst@36..50 "'08002b010203'"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

